feat: 🎸 [api] include category ID in product response
